--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-39.0.2.tar.gz",
     "react-native-web": "~0.13.12",
-    "expo-font": "~8.3.0"
+    "expo-font": "~8.3.0",
+    "expo-screen-orientation": "~2.0.0"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0"
