--- a/package.json
+++ b/package.json
@@ -24,7 +24,11 @@
     "react-navigation-stack": "^2.8.4",
     "react-redux": "^7.2.1",
     "redux": "^4.0.5",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "expo-image-picker": "~9.1.0",
+    "expo-permissions": "~9.3.0",
+    "expo-file-system": "~9.2.0",
+    "expo-sqlite": "~8.4.0"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0"
