--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
     "expo-image-picker": "~9.1.0",
     "expo-permissions": "~9.3.0",
     "expo-file-system": "~9.2.0",
-    "expo-sqlite": "~8.4.0"
+    "expo-sqlite": "~8.4.0",
+    "expo-location": "~9.0.0",
+    "react-native-maps": "0.27.1"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0"
